<resources>
    <string name="app_name">ALLumni</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="teks1">Tuliskan email anda agar kami dapat beberapa pertanyaan untuk mendapatkan username/password baru :</string>
    <string name="email">email</string>
    <string name="batal">Batal</string>
    <string name="back_button">back_button</string>
    <string name="back_icon">back_icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="forum">Forum</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nama">Nama</string>
    <string name="Email">Email</string>
    <string name="NIM">NIM</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="alamat">Alamat</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="lokasi">Lokasi Terkini</string>
    <string name="program">Program Studi</string>
    <string name="tanggal">Tanggal Lahir</string>
    <string name="studi">Studi Terakhir</string>
    <string name="nomor">Nomor HP</string>
    <string name="angkatan">Angkatan</string>
    <string name="tahun">Tahun Lulus</string>
    <string name="edit">edit</string>
    <string name="simpan">SIMPAN</string>
    <string name="todo">TODO</string>

</resources>