<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:background="@drawable/border"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="31dp"
            android:layout_height="30dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="39dp"
            app:layout_constraintBaseline_toTopOf=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_button"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/lupa_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lupa_password"
            android:textSize="22sp"
            android:paddingStart="80dp"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"
            tools:ignore="RtlSymmetry">
        </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/teks1"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/teks1"
        android:layout_marginTop="42dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/open_sans"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomStart="@android:dimen/app_icon_size">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/open_sans"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_gravity="center">

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:hint="@string/batal"
            android:textSize="20sp"
            android:backgroundTint="@color/abu"
            android:textColorHint="@color/ijotua"
            android:fontFamily="@font/open_sans"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:textSize="20sp"
            android:backgroundTint="@color/ijotua"
            android:textColorHint="@color/abu"
            android:hint="@string/kirim"
            android:fontFamily="@font/open_sans"
            tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>
</LinearLayout>