<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:background="@drawable/border"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="31dp"
            android:layout_height="30dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="39dp"
            android:contentDescription="@string/back_button"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backbt_black"
            tools:srcCompat="@drawable/backbt_black" />

        <TextView
            android:id="@+id/lupa_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="80dp"
            android:text="@string/lupa_password"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/teks1"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/teks1"
        android:layout_marginTop="42dp"
        android:textSize="18sp"
        android:textColor="@color/black"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomStart="@android:dimen/app_icon_size">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textinput"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/email">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/abu"
            android:fontFamily="@font/open_sans_bold"
            android:text="Batal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/bt_lupapswrd"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/bg_kirimlp"
            android:backgroundTint="@color/hijau"
            android:fontFamily="@font/open_sans_bold"
            android:hint="Kirim"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>